--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.10",
     "cordova-plugin-screen-orientation": "^3.0.1",
+    "express": "^4.16.3",
     "firebase": "^5.1.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "mongodb": "^3.1.4",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
     "sw-toolbox": "3.6.0",
