--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myApp",
+  "name": "AudioStories",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -8,7 +8,8 @@
     "start": "ionic-app-scripts serve",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
+    "lint": "ionic-app-scripts lint",
+    "dev": "pm2 start ecosystem.config.js"
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
