--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.10",
+    "body-parser": "^1.18.3",
     "cordova-plugin-screen-orientation": "^3.0.1",
     "express": "^4.16.3",
     "firebase": "^5.1.0",
