--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
-    "dev": "pm2 start ecosystem.config.js"
+    "server": "pm2 start ecosystem.config.js"
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
